--- a/Sitik/map/teoria.html
+++ b/Sitik/map/teoria.html
@@ -89,6 +89,16 @@
         </div>
         </section>
 
+        <a
+        class="btn btn-primary fs-5"
+        href="./knowBase.html"
+        style="
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        ">
+        Задать вопрос
+      </a>
         
     </main>
         <!-- end of main -->
